# yse

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: simd-performance-check.yml
benches/: adam_optimizer_configuration_benchmarks.rs  algorithm_vectorization_benchmarks.rs  arm_neon_benchmarks.rs  aspiration_window_statistics_benchmarks.rs  attack_pattern_performance_benchmarks.rs  avx512_benchmarks.rs  batch_ops_benchmarks.rs  bitscan_comprehensive_benchmarks.rs  board_clone_benchmarks.rs  castle_pattern_integration_benchmarks.rs  castle_recognition_cache_benchmarks.rs  component_validation_telemetry_benchmarks.rs  config_performance_benchmarks.rs  debug_logging_performance_benchmarks.rs  dynamic_reduction_formula_benchmarks.rs  endgame_detection_performance_benchmarks.rs  endgame_patterns_performance_benchmarks.rs  endgame_type_detection_benchmarks.rs  enhanced_prefetching_benchmarks.rs  evaluation_cache_performance_benchmarks.rs  evaluation_caching_benchmarks.rs  evaluation_performance_optimization_benchmarks.rs  feature_extraction_benchmarks.rs  hierarchical_tt_benchmarks.rs  history_heuristic_performance_benchmarks.rs  iid_lmr_coordination_benchmarks.rs  iid_move_extraction_benchmarks.rs  iid_performance_monitoring.rs  killer_move_ordering_performance_benchmarks.rs  lbfgs_line_search_benchmarks.rs  lmr_adaptive_tuning_benchmarks.rs  lmr_advanced_reduction_strategies_benchmarks.rs  lmr_consolidation_performance_benchmarks.rs  lmr_enhanced_classification_benchmarks.rs  lmr_escape_move_detection_benchmarks.rs  lmr_move_ordering_effectiveness_benchmarks.rs  lmr_performance_monitoring_benchmarks.rs  lmr_pruning_manager_adaptive_reduction_benchmarks.rs  lmr_re_search_margin_benchmarks.rs  lmr_tt_move_detection_benchmarks.rs  (+53 more)
config/opening_book/: default_weights.json  default_weights.yaml
config/pst/: default.json
docs/: ENGINE_CONFIGURATION_GUIDE.md  ENGINE_UTILITIES_GUIDE.md  UTILITIES_QUICK_REFERENCE.md
docs/api/: EVALUATION_CACHE_ADVANCED_INTEGRATION.md  EVALUATION_CACHE_API.md  EVALUATION_CACHE_BEST_PRACTICES.md  EVALUATION_CACHE_EXAMPLES.md  EVALUATION_CACHE_TROUBLESHOOTING.md  EVALUATION_CACHE_TUNING_GUIDE.md  MOVE_ORDERING_API.md  MOVE_ORDERING_BEST_PRACTICES.md  MOVE_ORDERING_PERFORMANCE_GUIDE.md  MOVE_ORDERING_TROUBLESHOOTING.md  TR posITION_TABLE_API_REFERENCE.md  bit-scanning-api-reference.md  bit-scanning-api.md  bit-scanning-migration-guide.md  bit-scanning-performance-guide.md
docs/move-ordering/: README.md
docs/performance/: auto_profiling.md  benchmark_positions.md  external_profiler_integration.md  memory_tracking.md  telemetry_export.md
docs/tuning/: material-value-set-workflows.md  material-value-sets.md  pst-tuning-methodology.md
examples/: advanced_cache_warming_example.rs  attack_pattern_demo.rs  bit-scanning-examples.rs  comprehensive_test_demo.rs  compressed_entry_storage_example.rs  dynamic_table_sizing_example.rs  ml_replacement_policies_example.rs  move_ordering_usage.rs  multi_level_transposition_table_example.rs  predictive_prefetching_example.rs  tablebase_examples.rs  telemetry_tuning_example.rs  transposition_table_basic_usage.rs  transposition_table_best_practices.rs  transposition_table_configuration_tuning.rs  transposition_table_integration.rs  transposition_table_performance_tuning.rs  transposition_table_troubleshooting.rs  weight_tuning_example.rs
resources/benchmark_positions/: standard_positions.json
resources/magic_tables/: README.md
resources/material/: classic.json  material_values.schema.json  research.json
src/: bitboards.rs  debug_utils.rs  error.rs  evaluation.rs  kif_parser.rs  lib.rs  main.rs  moves.rs  opening_book.rs  opening_book_converter.rs  time_utils.rs  usi.rs  weights.rs
src/ai/: openingBook.json
src/bitboards/: api.rs  attack_patterns.rs  batch_ops.rs  bit_iterator.rs  bit_utils.rs  bitscan.rs  branch_opt.rs  cache_opt.rs  debruijn.rs  integration.rs  lookup_tables.rs  masks.rs  memory_optimization.rs  platform_detection.rs  popcount.rs  simd.rs  sliding_moves.rs  square_utils.rs
src/config/: mod.rs
src/evaluation/: advanced_integration.rs  advanced_interpolation.rs  attacks.rs  castle_fixtures.rs  castle_geometry.rs  castles.rs  component_coordinator.rs  config.rs  dependency_graph.rs  endgame_patterns.rs  eval_cache.rs  evaluation_simd.rs  initiative_tracking.rs  integration.rs  king_safety.rs  material.rs  material_value_loader.rs  opening_principles.rs  pattern_advanced.rs  pattern_cache.rs  pattern_comprehensive_tests.rs  pattern_config.rs  pattern_optimization.rs  pattern_search_integration.rs  performance.rs  phase_transition.rs  piece_square_tables.rs  position_features.rs  positional_fixtures.rs  (+10 more)
tests/: algorithm_vectorization_tests.rs  aspiration_window_critical_fixes_tests.rs  aspiration_window_integration_tests.rs  aspiration_window_optimization_tests.rs  aspiration_window_performance_tests.rs  aspiration_window_performance_validation_tests.rs  aspiration_window_position_type_tests.rs  aspiration_window_regression_tests.rs  aspiration_window_tests.rs  auto_profiling_tests.rs  batch_ops_integration_tests.rs  batch_ops_tests.rs  benchmark_aggregation_tests.rs  benchmark_regression_tests.rs  bitboard_platform_integration_tests.rs  bitscan_comprehensive_tests.rs  bitscan_integration_tests.rs  bitscan_performance_tests.rs  castle_attack_integration_tests.rs  castle_pattern_integration_tests.rs  castle_pattern_regression_tests.rs  castle_progress_tests.rs  center_control_development_tests.rs  code_quality_improvements_tests.rs  component_validation_telemetry_tests.rs  comprehensive_tests.rs  config_tests.rs  configuration_tests.rs  error_hierarchy_tests.rs  eval_cache_integration_tests.rs  evaluation_caching_tests.rs  evaluation_component_dependency_tests.rs  evaluation_integration_coordination_tests.rs  evaluation_integration_tests.rs  evaluation_phase_scaling_tests.rs  evaluation_pipeline_tests.rs  evaluation_tuning_integration_tests.rs  evaluation_weight_balance_tests.rs  external_profiler_tests.rs  hierarchical_tt_integration_tests.rs  (+95 more)
(+308 files in other folders)
