[package]
name = "shogi-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["hierarchical-tt"]
# Enable verbose debug logging with compile-time checks
# When disabled, expensive string formatting is completely eliminated
verbose-debug = []
# Enable statistics tracking (Task 7.3)
# When disabled, statistics tracking code is compiled out
statistics = []
# Enable transposition-table prefetching hints (Task 4.0)
# Requires architecture support; falls back to no-op when unavailable
tt-prefetch = []
# Toggle long-tail legacy/unit tests that no longer track current APIs
legacy-tests = []
legacy-examples = []
# Enable hierarchical transposition table support (Task 9.x)
hierarchical-tt = []
# Enable fast-loop material evaluation optimization (Task 5.0)
material_fast_loop = []
# Enable SIMD optimizations for native platforms (x86_64 with AVX2/SSE, ARM64 with NEON)
# This feature enables explicit SIMD intrinsics for bitboard operations.
# Note: WebAssembly support has been removed - this feature is native-only.
simd = []

[lib]
crate-type = ["rlib"]

[[bin]]
name = "usi-engine"
path = "src/main.rs"

[[bin]]
name = "tuner"
path = "src/bin/tuner.rs"

[[bin]]
name = "analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "strength-tester"
path = "src/bin/strength-tester.rs"

[[bin]]
name = "move-assessor"
path = "src/bin/move_assessor.rs"

[[bin]]
name = "puzzle-gen"
path = "src/bin/puzzle_gen.rs"

[[bin]]
name = "generate_magic_tables"
path = "src/bin/generate_magic_tables.rs"

[[bin]]
name = "optimize_magic_numbers"
path = "src/bin/optimize_magic_numbers.rs"

[[bin]]
name = "pst-tuning-runner"
path = "src/bin/pst_tuning_runner.rs"

[dependencies]
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
lru = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["std"] }
num_cpus = "1.0"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
lazy_static = "1.4"
flate2 = "1.0"
chrono = "0.4"
parking_lot = "0.12"
crossbeam-deque = "0.8"
smallvec = "1.13"
memmap2 = "0.9"
sysinfo = "0.29"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# Clippy lint configuration
# Task 5.0 (Task 5.25)
[lints.clippy]
# Enable pedantic lints for stricter checking
# Note: Individual allows are added in code where needed
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow some lints that may be too strict for this codebase
module_inception = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
similar_names = "allow"
type_complexity = "allow"
cognitive_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
debug = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "aspiration_window_statistics_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "attack_pattern_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "bitscan_comprehensive_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "board_clone_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "castle_recognition_cache_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "config_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "debug_logging_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "dynamic_reduction_formula_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "endgame_detection_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "endgame_patterns_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "endgame_type_detection_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "evaluation_cache_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "evaluation_caching_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "evaluation_performance_optimization_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "history_heuristic_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "iid_lmr_coordination_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "iid_move_extraction_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "iid_performance_monitoring"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "killer_move_ordering_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_adaptive_tuning_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_advanced_reduction_strategies_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_consolidation_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_enhanced_classification_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_escape_move_detection_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_move_ordering_effectiveness_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_performance_monitoring_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_pruning_manager_adaptive_reduction_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_re_search_margin_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "lmr_tt_move_detection_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "mate_threat_detection_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "material_evaluation_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "move_ordering_configuration_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "move_ordering_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "move_scoring_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "move_unmaking_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "nmp_performance_validation_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "null_move_performance_monitoring_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "null_move_verification_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "opening_principles_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "parallel_search_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "phase_transition_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "piece_square_tables_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "position_features_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "pv_move_ordering_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "quiescence_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "repetition_detection_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "search_coordination_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "see_and_cache_eviction_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "tablebase_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "tablebase_performance_validation"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "tapered_evaluation_performance_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "tapered_evaluation_validation_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "time_management_overhead_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "time_pressure_management_benchmarks"
harness = false
required-features = ["legacy-tests"]

[[bench]]
name = "tt_entry_priority_benchmarks"
harness = false
[[bench]]
name = "hierarchical_tt_benchmarks"
harness = false
required-features = ["hierarchical-tt"]
[[example]]
name = "transposition_table_configuration_tuning"
path = "examples/transposition_table_configuration_tuning.rs"
required-features = ["legacy-tests"]

[[example]]
name = "transposition_table_integration"
path = "examples/transposition_table_integration.rs"
required-features = ["legacy-tests"]

[[example]]
name = "dynamic_table_sizing_example"
path = "examples/dynamic_table_sizing_example.rs"
required-features = ["legacy-tests"]

[[example]]
name = "ml_replacement_policies_example"
path = "examples/ml_replacement_policies_example.rs"
required-features = ["legacy-tests"]

[[example]]
name = "bit-scanning-examples"
path = "examples/bit-scanning-examples.rs"
required-features = ["legacy-tests"]

[[example]]
name = "multi_level_transposition_table_example"
path = "examples/multi_level_transposition_table_example.rs"
required-features = ["legacy-tests"]

[[example]]
name = "tablebase_examples"
path = "examples/tablebase_examples.rs"
required-features = ["legacy-tests"]

[[example]]
name = "attack_pattern_demo"
path = "examples/attack_pattern_demo.rs"

[[bench]]
name = "simd_performance_benchmarks"
harness = false
required-features = ["simd"]

[[bench]]
name = "simd_instruction_validation"
harness = false
required-features = ["simd"]

[[bench]]
name = "batch_ops_benchmarks"
harness = false
required-features = ["simd"]
